deploy/prometheus-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: prometheus-webhook-dingtalk
  name: prometheus-webhook-dingtalk
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      run: prometheus-webhook-dingtalk
  template:
    metadata:
      labels:
        run: prometheus-webhook-dingtalk
    spec:
      containers:
      - name: dingtalk
        image: harbor.rokid-inc.com/opensource/prometheus-webhook-dingtalk:v0.3.1
        imagePullPolicy: IfNotPresent
        # 设置钉钉群聊自定义机器人后，使用实际 access_token 替换下面 xxxxxx部分
        args:
          - --config.file=/etc/prometheus-webhook-dingtalk/conf/config.yml
        ports:
          - containerPort: 8060
            protocol: TCP
        volumeMounts:
          - name: webhook-dingtalk-config
            mountPath: /etc/prometheus-webhook-dingtalk/conf
            readOnly: true
      volumes:
        - name: webhook-dingtalk-config
          configMap:
            name: webhook-dingtalk-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: prometheus-webhook-dingtalk
  name: prometheus-webhook-dingtalk
  namespace: monitor
spec:
  ports:
  - port: 8060
    protocol: TCP
    targetPort: 8060
  selector:
    run: prometheus-webhook-dingtalk
  sessionAffinity: None
