deploy/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-web
  namespace: monitor
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - webhook.rokid-inc.com
    secretName: rokidinc
  rules:
  - host: webhook.rokid-inc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-webhook-dingtalk
          servicePort: 80
